<resources>
    <string name="app_name">My Store is Safe</string>
    <string name="covid_tracker">COVID TRACKER</string>
    <string name="imagem_covid">image-covid</string>
    <string name="client">Client</string>
    <string name="apointment">Apointment</string>
    <string name="name">Name</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="contact">Contact</string>
    <string name="let_s_start_our_day_the_safe_way">Let\'s start our day the safe way</string>
    <string name="my_store_is_safe">My store Is Safe!</string>
    <string name="button">Button</string>
    <string name="bookings">Apointments</string>
    <string name="book_apointment">Book Apointment</string>
    <string name="always_remember">ALWAYS REMEMBER!!</string>
    <string name="agendado">BOOKED WITH SUCCESS!!</string>
    <string name="canceled">Canceled!</string>
    <string name="todo">TODO</string>
    <string name="adress">Adress</string>
    <string name="age">Age</string>
    <string name="avg_temperature">AVG Temperature</string>
    <string name="save">SAVE</string>
    <string name="apointment_hour">Apointment Hour</string>
    <string name="estimate_time">Estimate Time</string>
    <string name="apointment_date">Apointment Date</string>
    <string name="img1">img1</string>
    <string name="adicionar_cliente">Add Client</string>
    <string name="emergencia">Emergency</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="thanks_for_downloading">Thanks for downloading ^.^</string>
    <string name="the_creator">The creator</string>
    <string name="this_app_was_created_by_miguel_pereira_on_the_course_of_an_evaluations_for_advanced_programming_class_the_goal_is_to_achieve_an_app_wich_could_be_suitable_for_a_business_that_may_require_appointements_due_to_the_covid_19_sittuation">This app was created by MIGUEL PEREIRA on the course of an evaluations for advanced programming class, the goal is to achieve an app wich could be suitable for a business that may require appointements due to the covid-19 sittuation.</string>
    <string name="erro">Please fill the fields</string>
    <string name="ToastSave">Saved with success</string>
    <string name="sucesso">Saved with success</string>
    <string name="view_customer">View Customer</string>
    <string name="ver_marca_o">ver marcação</string>
</resources>
