<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fade"
    tools:context=".App_Info">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="192dp"
        android:layout_height="168dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/the_creator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/MIGUELPEREIRA_foreground" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="128dp"
        android:layout_marginTop="60dp"
        android:text="@string/this_app_was_created_by_miguel_pereira_on_the_course_of_an_evaluations_for_advanced_programming_class_the_goal_is_to_achieve_an_app_wich_could_be_suitable_for_a_business_that_may_require_appointements_due_to_the_covid_19_sittuation"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="269dp"
        android:layout_height="42dp"
        android:layout_marginBottom="296dp"
        android:text="@string/thanks_for_downloading"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>