<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundoMain"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding ="30dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="346dp"
            android:layout_height="73dp"
            android:text="@string/my_store_is_safe"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.074" />

        <Button
            android:id="@+id/button_agenda"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/button"
            android:text="@string/bookings"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_cliente"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button"
            android:text="@string/client"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_agenda"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toStartOf="@+id/button_agenda"
            app:layout_constraintTop_toBottomOf="@+id/button_agenda"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button_book"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginVertical="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="@string/book_apointment"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_cliente"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toStartOf="@+id/button_cliente"
            app:layout_constraintTop_toBottomOf="@+id/button_cliente"
            app:layout_constraintVertical_bias="0.00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>